--- a/index.html
+++ b/index.html
@@ -12,6 +12,76 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="title">
+            <h2>General Questions</h2>
+        </div>
+        
+        <div class="questions-section">
+            <!-- start -->
+            <article class="question">
+                <div class="question-title">
+                    <p>Do you accept credit cards?</p>
+                    <button type="button" class="question-btn">
+                        <span>
+                            <i class="far fa-plus-square"></i>
+                        </span>
+                        <span>
+                            <i class="far fa-minus-square"></i>
+                        </span>
+                    </button>
+                </div>
+                <div class="question-text">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id laborum tempore quos! Nisi, aliquid
+                        dolores, alias a adipisci ullam obcaecati, tempore quae commodi est cum magni praesentium nam
+                        temporibus repellendus?</p>
+                </div>
+            </article>
+            <!-- finish -->
+             <!-- start -->
+             <article class="question">
+                <div class="question-title">
+                    <p>Do you ship globally?</p>
+                    <button type="button" class="question-btn">
+                        <span>
+                            <i class="far fa-plus-square"></i>
+                        </span>
+                        <span>
+                            <i class="far fa-minus-square"></i>
+                        </span>
+                    </button>
+                </div>
+                <div class="question-text">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id laborum tempore quos! Nisi, aliquid
+                        dolores, alias a adipisci ullam obcaecati, tempore quae commodi est cum magni praesentium nam
+                        temporibus repellendus?</p>
+                </div>
+            </article>
+            <!-- finish -->
+             <!-- start -->
+             <article class="question">
+                <div class="question-title">
+                    <p>Do you accept returns?</p>
+                    <button type="button" class="question-btn">
+                        <span>
+                            <i class="far fa-plus-square"></i>
+                        </span>
+                        <span>
+                            <i class="far fa-minus-square"></i>
+                        </span>
+                    </button>
+                </div>
+                <div class="question-text">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id laborum tempore quos! Nisi, aliquid
+                        dolores, alias a adipisci ullam obcaecati, tempore quae commodi est cum magni praesentium nam
+                        temporibus repellendus?</p>
+                </div>
+            </article>
+            <!-- finish -->
+        </div>
+
+    </div>
+
     <script src="app.js"></script>
 </body>
 
