change +/- icon on click of btn

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <div class="question-title">
                     <p>Do you accept credit cards?</p>
                     <button type="button" class="question-btn">
-                        <span>
+                        <span class="plus-icon">
                             <i class="far fa-plus-square"></i>
                         </span>
-                        <span>
+                        <span class="minus-icon">
                             <i class="far fa-minus-square"></i>
                         </span>
                     </button>
@@ -43,10 +43,10 @@
                 <div class="question-title">
                     <p>Do you ship globally?</p>
                     <button type="button" class="question-btn">
-                        <span>
+                        <span class="plus-icon">
                             <i class="far fa-plus-square"></i>
                         </span>
-                        <span>
+                        <span class="minus-icon">
                             <i class="far fa-minus-square"></i>
                         </span>
                     </button>
@@ -63,10 +63,10 @@
                 <div class="question-title">
                     <p>Do you accept returns?</p>
                     <button type="button" class="question-btn">
-                        <span>
+                        <span class="plus-icon">
                             <i class="far fa-plus-square"></i>
                         </span>
-                        <span>
+                        <span class="minus-icon">
                             <i class="far fa-minus-square"></i>
                         </span>
                     </button>
